--- a/test_the _code.ipynb
+++ b/test_the _code.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,10 +59,31 @@
      "text": [
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['ECO#',\n",
+       " 'G2',\n",
+       " 'P2',\n",
+       " 'G3',\n",
+       " 'EXPNO',\n",
+       " 'VAR-NAME........',\n",
+       " 'TC',\n",
+       " 'PD',\n",
+       " 'ECONAME..........',\n",
+       " 'RUE1',\n",
+       " 'RUE2']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "irri = IrrigationAnalysis(dates = ('2022-04-01', '2022-09-15'), crop_type='Potato', soil_class = 'SIL')"
+    "irri = IrrigationAnalysis(dates = ('2022-04-01', '2022-09-15'), crop_type='Potato', soil_class = 'SIL')\n",
+    "irri.crop.parameters"
    ]
   },
   {
